# rofi-pet-snippets

./: .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt  rofi-pet-snippets.py  rofi_pet_snippets.py  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
rofi_pet_snippets/: __init__.py  cmd.py  log.py  pet.py  rofi.py
tests/: conftest.py  test_CmdWrapper.py  test_PetWrapper.py  test_RofiWrapper.py  test_main.py
