[metadata]
name = rofi_pet_snippets
version = attr: rofi_pet_snippets.VERSION
description = Rofi script/plugin to list, search and copy pet snippets to clipboard (wayland only)
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = Toni Mägel
author_email = tmaegel@posteo.de
project_url = https://github.com/tmaegel/rofi-pet-snippets
keywords = rofi, pet, snippets

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    rofi-pet-snippets = rofi_pet_snippets:main

[options.package_data]
* = *.txt, *.md

# These dependencies will only be installed
# if you ask for them, e.g. pip install -e ".[dev]".
[options.extras_require]
dev =
  flake8>=4,<5
  mypy>=0.950,<1
  pylint>=2,<3
  tox>=3,<4

[flake8]
exclude = .git, .eggs, __pycache__, docs/, build/, dist/, venv/, .mypy_cache, .pytest_cache, .tox/, instance/
max-line-length=88
